# station-data-portal-backend

./: .env.example  .gitignore  .travis.yml  Dockerfile  MANIFEST.in  Makefile  NEWS.md  Pipfile  README.md  logging.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_requirements.txt
.github/workflows/: docker-publish.yml  pypi-publish.yml  python-ci.yml
docker/: Dockerfile  docker-compose.yaml  gunicorn.conf  gunicorn.env
docker/local-postgres-10/: Dockerfile  README.md  entrypoint.sh
docker/local-pytest/: Dockerfile  entrypoint.sh
docs/: api-design.md  configuration.md  development.md  installation.md  performance-testing.md  production.md  supporting-crmp.md  unit-testing.md
docs/development/: caveats.md  installation.md  performance-testing.md  running-locally.md  unit-testing.md
scripts/: devserver.py
sdpb/: __init__.py  routes.py  timing.py  util.py  wsgi.py
sdpb/api/: __init__.py  crmp_network_geoserver.py  frequencies.py  histories.py  networks.py  observations.py  station_variables.py  stations.py  variables.py
sdpb/api/station_weather/monthly/: weather.py
sdpb/api/weather/monthly/: baseline.py
sdpb/data/: test.csv
sdpb/openapi/: api-spec.yaml
sdpb/util/: query.py  representation.py
tests/: conftest.py  test_api.py  test_fixtures.py  test_helpers.py  test_routes.py
tests/api/: conftest.py  test_histories.py  test_networks.py  test_stations.py  test_variables.py
tests/helpers/: helpers.py
tests/performance/: conftest.py  test_performance.py
tests/unit/api/: conftest.py  test_histories.py  test_networks.py  test_station_variables.py  test_stations.py  test_variables.py
tests/unit/api/weather/monthly/: test_baseline.py  test_weather.py
