[tool.poetry]
name = "sdpb"
version = "11.0.1"
description = "PCIC microservice for station data"
authors = ["rod-glover <rglover@uvic.ca>"]
license = "GNU General Public License v3 (GPLv3)"
readme = "README.md"
homepage = "http://www.pacificclimate.org/"
repository = "https://github.com/pacificclimate/station-data-portal-backend"
keywords=["sql", "database", "pcds", "crmp", "climate", "meteorology"]
classifiers=[
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.7",
    "Topic :: Internet",
    "Topic :: Scientific/Engineering",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [{ include = "sdpb"}]

[[tool.poetry.source]]
name = "pcic"
url = "https://pypi.pacificclimate.org/simple/"
secondary = true

[tool.poetry.dependencies]
# Several of these version specs should be loosened if possible
python = "^3.8"
PyYAML = "^6.0"
python-dateutil = "2.8.2"
Flask = "2.2.5"
Flask-Cors = "3.0.10"
Flask-SQLAlchemy = "2.5.1"
flask-compress = "*"
sqlalchemy = "~=1.4.35"
pycds = { version = "4.3.0.dev1", source = "pcic" }
connexion = { version = "2.13.0", extras = ["swagger-ui"] }

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
testing-postgresql = "^1.3.0"
# Black defaults can change with version, which invalidates some code. Update version
# only if you are prepared to re-run Black on entire codebase; best left to a separate PR.
black = "23.3.0"

[tool.poetry.group.deploy.dependencies]
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
