[tool.poetry]
name = "sdpb"
version = "11.4.2"
description = "PCIC microservice for station data"
authors = ["rod-glover <rglover@uvic.ca>", "john-sampson <johnsampson@uvic.ca>", "lee-zeman <lzeman@uvic.ca>"]
license = "GNU General Public License v3 (GPLv3)"
readme = "README.md"
homepage = "http://www.pacificclimate.org/"
repository = "https://github.com/pacificclimate/station-data-portal-backend"
keywords=["sql", "database", "pcds", "crmp", "climate", "meteorology"]
classifiers=[
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.7",
    "Topic :: Internet",
    "Topic :: Scientific/Engineering",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [{ include = "sdpb"}]

[[tool.poetry.source]]
name = "pcic"
url = "https://pypi.pacificclimate.org/simple/"
secondary = true

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"
python-dateutil = "^2.8.2"
sqlalchemy = "~=1.4.35,<2.0"
pycds = { version = "4.5.0", source = "pcic"}
connexion = { version = "^2.14.2", extras = ["swagger-ui"] }
flask = ">=1.0.4,<2.3"  # Versions required by connexion
flask-cors = "^4.0.0"
flask-sqlalchemy = "^3.0.5"
flask-compress = "^1.13"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
testing-postgresql = "^1.3.0"
# Black defaults can change with version, which invalidates some code. Update version
# only if you are prepared to re-run Black on entire codebase; best left to a separate PR.
black = "23.3.0"

[tool.poetry.group.deploy.dependencies]
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
